# UnionWins

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.umami  README.md  dev.sh  docker-compose.yml  lint_and_build.sh  nginx-umami.conf  nginx-unionwins.conf  package-lock.json  package.json
.github/: .copilot-instructions.md  ACCESSIBILITY_GUIDELINES.md
.github/workflows/: deploy.yml
backend/: pyproject.toml
backend/src/: auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/src/routes/: __init__.py  admin.py  newsletter.py  proxy.py  rss.py  scraping.py  search.py  submissions.py  wins.py
backend/src/services/: email_service.py  infographic_service.py  research_service.py  scheduler.py  scraping_service.py  search_service.py  submission_service.py  tiktok_service.py  win_service.py
frontend/: index.html  package.json  vite.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/src/: About.tsx  Admin.tsx  ApiSignup.tsx  App.tsx  Home.tsx  Newsletter.tsx  PrivacyPolicy.tsx  Stats.tsx  TermsOfService.tsx  index.css  main.tsx
frontend/src/components/: ActionBar.tsx  AdminApiKeys.tsx  AdminHeader.tsx  (+23 more)
scripts/: add_missing_emojis.py  check_dead_urls.py  classify_win_types.py  clean_union_names.py  create_video.py  dedupe_unions.py  drop_image_column.py  fix_remaining_unions.py  fix_union_edge_cases.py  init_db.py  remove_wins.py  replace_airplane_emoji.py  search_stepping.py  submit_union_wins.py  test_apostrophe.py  test_email.py  test_uk_unions_import.py  test_unions_endpoint.py
scripts/tiktok/: create_video.py
(+9 files in other folders)
