[project]
name = "union-wins-backend"
version = "1.0.0"
description = "Backend API for What Have Unions Done For Us"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "openai>=1.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    "resend>=0.8.0",
    "moviepy>=1.0.3",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
